# raft-playground

./: Cargo.toml  README.md
src/: background.rs  main.rs  state.rs  ui.rs
src/background/: connection.rs  observer.rs  storage.rs
src/ui/: cluster_view.rs  message.rs  node.rs  toolbox.rs  utils.rs  widget_ext.rs  widgets.rs
src/ui/widgets/: channel.rs  node.rs
