[package]
name = "raft-playground"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-zero = { version = "0.3.0", features = ["default-tokio", "tracing"] }
raft-zero = { path = "../raft-zero" }
conrod_core = "0.70.0"
conrod_derive = "0.70.0"
conrod_winit = "0.70.0"
conrod_glium = "0.70.0"
glium = "0.24"
# You can use any font you like but this works well for lazy people (like me)
ttf-noto-sans = "0.1.1"
find_folder = "0.3.0"
winit = "0.19"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }
futures = "0.3.5"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
async-trait = "0.1.41"
pretty_env_logger = "0.4"

[patch.crates-io]
act-zero = { path = "../act-zero" }